// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Overview -> View should render empty message, when list is empty and historical data is found 1`] = `
NodeList [
  <tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
      colspan="5"
    >
      <div
        class="euiTableCellContent euiTableCellContent--alignCenter"
      >
        <span
          class="euiTableCellContent__text"
        >
          <div
            class="euiEmptyPrompt"
          >
            <span
              class="euiTextColor euiTextColor--subdued"
            >
              <div
                class="euiTitle euiTitle--small"
              >
                No services found
              </div>
              <div
                class="euiSpacer euiSpacer--m"
              />
            </span>
          </div>
        </span>
      </div>
    </td>
  </tr>,
]
`;

exports[`Service Overview -> View should render getting started message, when list is empty and no historical data is found 1`] = `
NodeList [
  <tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
      colspan="5"
    >
      <div
        class="euiTableCellContent euiTableCellContent--alignCenter"
      >
        <span
          class="euiTableCellContent__text"
        >
          <div
            class="euiEmptyPrompt"
          >
            <span
              class="euiTextColor euiTextColor--subdued"
            >
              <div
                class="euiTitle euiTitle--small"
              >
                Looks like you don't have any APM services installed. Let's add some!
              </div>
              <div
                class="euiSpacer euiSpacer--m"
              />
              <div
                class="euiText euiText--medium"
              >
                <p>
                  Upgrading from a pre-7.x version? Make sure you've also upgraded
              your APM server instance(s) to at least 7.0.
                </p>
                <p>
                  You may also have old data that needs to be migrated.
                   
                  <a
                    class="euiLink euiLink--primary"
                    href="/app/kibana#/management/elasticsearch/upgrade_assistant"
                  >
                    Learn more by visiting the Kibana Upgrade Assistant
                  </a>
                  .
                </p>
              </div>
            </span>
            <div
              class="euiSpacer euiSpacer--l"
            />
            <div
              class="euiSpacer euiSpacer--s"
            />
            <a
              class="euiLink euiLink--primary"
              href="/app/kibana#/home/tutorial/apm"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton--fill"
                type="button"
              >
                <span
                  class="euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Setup Instructions
                  </span>
                </span>
              </button>
            </a>
          </div>
        </span>
      </div>
    </td>
  </tr>,
]
`;

exports[`Service Overview -> View should render services, when list is not empty 1`] = `
NodeList [
  <tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell"
      width="50%"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Name
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="euiToolTipAnchor"
        >
          <a
            aria-describedby="service-name-tooltip"
            class="euiLink euiLink--primary sc-bdVaJa eQDnXY"
            href="#/My Go Service/transactions?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
          >
            My Go Service
          </a>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Agent
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        go
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Avg. response time
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        1 ms
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Trans. per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        400.0 tpm
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Errors per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        500.0 err.
      </div>
    </td>
  </tr>,
  <tr
    class="euiTableRow"
  >
    <td
      class="euiTableRowCell"
      width="50%"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Name
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        <span
          class="euiToolTipAnchor"
        >
          <a
            aria-describedby="service-name-tooltip"
            class="euiLink euiLink--primary sc-bdVaJa eQDnXY"
            href="#/My Python Service/transactions?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
          >
            My Python Service
          </a>
        </span>
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Agent
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--overflowingContent"
      >
        python
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Avg. response time
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        0 ms
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Trans. per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        100.0 tpm
      </div>
    </td>
    <td
      class="euiTableRowCell"
    >
      <div
        class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
      >
        Errors per minute
      </div>
      <div
        class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
      >
        200.0 err.
      </div>
    </td>
  </tr>,
]
`;
